--- a/assets/css/me.css
+++ b/assets/css/me.css
@@ -182,3 +182,10 @@ footer {
         display: block;
     }
 }
+
+/* Accessibility */
+@media (prefers-reduced-transparency) {
+    section {
+        background-color: black;
+    }
+}
