--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1506,9 +1506,9 @@ blockquote {
 }
 
 /* Accessibility */
-/*@media (prefers-reduced-motion) {
+@media (prefers-reduced-motion) {
     * {
         animation: none !important;
         transition: none !important;
     }
-}*/
+}
