Update to new Fella (always use latest version) and fix bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,7 @@
     display: none;
 }
 
-#app.loaded #loader {
-    display: none !important;
-}
-
-#app.loaded #page {
+body.fella-loaded #page {
     display: block !important;
 }
 
